2006-12-31  Richard Levitte  <richard@levitte.org>

	* debian/control (Build-Depends): Add a dependency to the
	libboost-serialization-dev package.  It's unfortunate that I
	forgot to do this before the release of 0.32...

2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/update_clobbers_workspace/__driver__.lua: new test to
	see how update handles various workspace conflicts
	* testsuite.lua: call it

2006-12-28  Richard Levitte  <richard@levitte.org>

	* examples/mirror.rc: An incomplete example specification for
	contrib/monotone-mirror.pl.

2006-12-28  Richard Levitte  <richard@levitte.org>

	* contrib/monotone-mirror.sh: Mirroring script.
	* contrib/monotone-mirror-postaction-update.sh: Postaction script
	that goes with contrib/monotone-mirror.sh.
	* contrib/README: Describe them.

2006-12-28  Matthew Nicholson  <matt@matt-land.com>

	* contrib/monotone.bash_completion: Renamed regenerate_rosters to
	regenerate_caches.

2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/checkout_clobbers_workspace/__driver__.lua: new test to
	see how checkout handles various workspace conflicts
	* testsuite.lua: call it
	
2006-12-28  Derek Scherger  <derek@echologic.com>

	* tests/missing_empty_dir/__driver__.lua: new test for missing,
	empty, versioned directories 
	* testsuite.lua: call it
	* work.cc (update_current_roster_from_filesystem): abort if there
	are missing directories, whether they contained files or
	not. tweak the associated messages so they're a bit more specific
	about missing things verses things that are not what they should
	be, like files that should be directories and vice-versa.
	
2006-12-27  Richard Levitte  <richard@levitte.org>

	* NEWS: Date the release.

2006-12-27  Richard Levitte  <richard@levitte.org>

	* configure.ac, debian/changelog, monotone.spec,
	win32/monotone.iss, visualc/config.h: Bumped to version 0.32.

2006-12-27  Richard Levitte  <richard@levitte.org>
